# pegas-chile

./: .gitignore  README.md  main.py  pyproject.toml
frontend/: package-lock.json  package.json  prettier.config.cjs  tailwind.config.ts  tsconfig.json  wrangler.toml
frontend/src/: job-posts.json
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx  sitemap.xml  types.tsx
frontend/src/app/api/: route.ts
frontend/src/app/companies/: page.tsx
frontend/src/app/jobs/: page.tsx
frontend/src/components/: companyCard.tsx  container.tsx  jobPostCard.tsx  navbar.tsx  salaryChart.tsx  searchBar.tsx  technologiesContainer.tsx  tecnologiesContainer.tsx
frontend/src/components/CompanyCard/: CompanyCard.tsx
frontend/src/components/Container/: Container.tsx
frontend/src/components/NavBar/: Navbar.tsx
frontend/src/containers/CompaniesPage/: companyBoardSection.tsx  headerSection.tsx
frontend/src/containers/CompanyPage/: companyHeaderSection.tsx  companyPostsSection.tsx  salaryChartSection.tsx
frontend/src/containers/Home/: callToActionSection.tsx  heroSection.tsx  jobCarrouselSection.tsx
frontend/src/containers/JobPostPage/: companyNameSection.tsx  contactSection.tsx  dateSection.tsx  jobDetailSection.tsx  linkSection.tsx
frontend/src/helpers/: companiesHelper.ts  jobPostsHelper.ts  salary.ts  technologiesHelper.ts
frontend/src/hooks/: useInfiniteScroll.ts
frontend/src/services/: apiService.ts
processing/: .gitignore  enumerator.py  main.py  merger.py  prompt.txt  pyproject.toml  uploader.py
(+11 files in other folders)
